--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,5 +1,6 @@
 #H2 Server Properties
+#Sun Apr 04 01:28:03 EDT 2021
 0=JHipster H2 (Memory)|org.h2.Driver|jdbc\:h2\:mem\:rfbloyaltyjpa|rfbloyaltyjpa
+webSSL=false
 webAllowOthers=true
 webPort=8092
-webSSL=false
