adding home page and all others. Before Security Roles(94)

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -137,6 +137,18 @@ spring:
             client-secret: web_app
             scope: openid,profile,email
 
+#  security:
+#    oauth2:
+#      client:
+#        provider:
+#          oidc:
+#            issuer-uri: ${OKTA_OAUTH2_ISSUER_URI}
+#        registration:
+#          oidc:
+#            client-id: ${OKTA_OAUTH2_CLIENT_ID}
+#            client-secret: ${OKTA_OAUTH2_Client_Secret}
+#            scope: openid,profile,email
+
 server:
   servlet:
     session:
